# cursada_mc2

./: .clang-format  .cproject  .editorconfig  .gitattributes  .gitignore  .project  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  arm-none-eabi-gcc.cmake  compile_commands.json
.github/workflows/: ci.yml  doxygen-pages.yml
Release/: cursada_Release.ld  cursada_Release_library.ld  cursada_Release_memory.ld  makefile
Release/src/: subdir.mk
cmake/: RunGcov.cmake  lpc4337.cmake  toolchain-arm-none-eabi.cmake
inc/: led_Driver.h  teclado.h  teclasPinInt.h  teclas_driver.h
inc/Driver/: led_Driver.h  teclado.h  teclas_driver.h
ld/: cursada_Debug.ld  cursada_Debug_library.ld
platform/: README.md  toolchain-gcc-arm-embedded.cmake
platform/ldscripts/default/sections/: sections_crp.ld
platform/lpc43xx/: lpc43xx.cmake  lpc43xx_targets.cmake
platform/lpc43xx/ldscripts/default/mem/: mem.ld
platform/lpc43xx/ldscripts/default/sections/: sections.ld
platform/lpc43xx/lpc_chip_43xx/: CMakeLists.txt
platform/openocd/: ciaa-nxp.cfg
src/: CMakeLists.txt  README.md  blink_main.c  led_Driver.c  main.c  sysinit.c  teclado.c  teclasPinInt.c  teclas_driver.c  test.c
src/Driver/: CMakeLists.txt  adc_driver.c  adc_driver.h  buttons_driver.h  buzzer.c  buzzer.h  buzzer_driver.h  dac_driver.c  dac_driver.h  delay_driver.c  delay_driver.h  ds18b20_driver.c  ds18b20_driver.h  eeprom_driver.c  eeprom_driver.h  keyboard_driver.c  lcd_driver.c  lcd_driver.h  led_Driver.c  led_Driver.h  onewire_driver.c  onewire_driver.h  teclado.c  teclado.h  teclasPinInt.c  teclasPinInt.h  teclas_driver.c  timer_driver.c  timer_driver.h  uart_driver.c  uart_driver.h  uart_driver_irq.c  uart_driver_irq.h
src/app/: README.md  app.c  app.h  parametros.c  parametros.h  parametros_default.c  parametros_default.h
src/control/: README.md  control.c  control.h  control_on_off.c  control_on_off.h  control_selector.c  control_selector.h
src/drivers/: CMakeLists.txt  README.md  buttons_driver.c  buttons_driver.h  buzzer_driver.c  buzzer_driver.h  delay_driver.c  ds18b20_driver.c  ds18b20_driver.h  eeprom_driver.c  keyboard_driver.h  led_driver.c  led_driver.h  onewire_driver.h  timer_driver.c  timer_driver.h  uart_driver.c
src/hmi/: README.md  hmi.c  hmi.h
src/startup/: README.md  crp.c
tests/: CMakeLists.txt  README.md
tests/app/: parametros_tests.c
tests/control/: control_tests.c
tests/support/: fake_eeprom_driver.c  fake_eeprom_driver.h  test_harness.c  test_harness.h
tests/support/drivers/: eeprom_driver.h
